Launch statically and use the main method of the class to be loaded