@@ -2,23 +2,12 @@ package de.phyrone.libloader;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.util.Properties;
 
 public class LibLauncher {
-
-    private Class<Runnable> runClass;
-
-    private LibLauncher(String name) throws ClassNotFoundException {
-        URLClassLoader classLoader = new URLClassLoader(new URL[0], this.getClass().getClassLoader());
-        try {
-            runClass = (Class<Runnable>) Class.forName(name, true, classLoader);
-        } catch (ClassCastException e) {
-            e.printStackTrace();
-        }
-
-    }
 
     public static void main(String[] args) throws IOException {
         InputStream stream = LibLauncher.class.getClassLoader().getResourceAsStream("dependencies.properties");
@@ -26,7 +15,9 @@ public class LibLauncher {
         properties.load(stream);
         stream.close();
         try {
-            new LibLauncher(properties.getProperty("main")).start();
+            URLClassLoader classLoader = new URLClassLoader(new URL[0], LibLauncher.class.getClassLoader());
+            Class<?> clazz = Class.forName(properties.getProperty("main"), true, classLoader);
+            start(clazz, args);
         } catch (ClassNotFoundException e) {
             System.err.println("Could no Found MainClass");
             e.printStackTrace();
@@ -34,10 +25,11 @@ public class LibLauncher {
         }
     }
 
-    private void start() {
+    private static void start(Class<?> clazz, String[] args) {
         try {
-            runClass.newInstance().run();
-        } catch (InstantiationException | IllegalAccessException e) {
+            Object object = clazz.getDeclaredConstructor().newInstance();
+            clazz.getDeclaredMethod("main", String[].class).invoke(object, (Object) args);
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
             e.printStackTrace();
         }
     }
